--- a/Sprint1/estilos.css
+++ b/Sprint1/estilos.css
@@ -1,12 +1,12 @@
 *{
     padding: 0;
     margin: 0;
-}
+0
 
 #navegacion {
     width: 100%;
     height: 80px;
-    background-color: rgb(61, 212, 162);
+    background-color: rgb(60, 212, 162);
 }
 
 
